feat(app-vite/app-webpack): export ESLint config

--- a/app-vite/package.json
+++ b/app-vite/package.json
@@ -41,6 +41,11 @@
       "types": "./types/bex/bex-bridge.d.ts",
       "import": "./exports/bex/private/bex-bridge.js"
     },
+    "./eslint": {
+      "require": "./exports/eslint/eslint.cjs",
+      "node": "./exports/eslint/eslint.js",
+      "import": "./exports/eslint/eslint.js"
+    },
     "./lib/testing.js": {
       "import": "./exports/testing/testing.js"
     }
