feat(create-quasar): update all new q/app templates to use ESLint v9; convert webpack to type=module & all related files

--- a/create-quasar/templates/app/quasar-v2/ts-webpack-4/BASE/_.vscode/extensions.json
+++ b/create-quasar/templates/app/quasar-v2/ts-webpack-4/BASE/_.vscode/extensions.json
@@ -1,7 +1,7 @@
 {
   "recommendations": [
-    <% if (preset.lint) { %>"dbaeumer.vscode-eslint",
-    <% if (lintConfig === 'prettier') { %>"esbenp.prettier-vscode",<% } } %>
+    <% if (preset.eslint) { %>"dbaeumer.vscode-eslint",<% } %>
+    <% if (lintConfig === 'prettier') { %>"esbenp.prettier-vscode",<% } %>
     "editorconfig.editorconfig",
     "vue.volar",
     "wayou.vscode-todo-highlight"
