--- a/create-quasar/templates/app/quasar-v2/ts-vite-2/BASE/_.vscode/settings.json
+++ b/create-quasar/templates/app/quasar-v2/ts-vite-2/BASE/_.vscode/settings.json
@@ -1,8 +1,8 @@
 {
   "editor.bracketPairColorization.enabled": true,
-  "editor.guides.bracketPairs": true,<% if (preset.lint) { %>
+  "editor.guides.bracketPairs": true,<% if (preset.eslint) { %>
   "editor.formatOnSave": true,
-  "editor.defaultFormatter": <% if (lintConfig === 'prettier') { %>"esbenp.prettier-vscode"<% } else { %>"dbaeumer.vscode-eslint"<% } %>,
+  "editor.defaultFormatter": <% if (prettier) { %>"esbenp.prettier-vscode"<% } else { %>"dbaeumer.vscode-eslint"<% } %>,
   "editor.codeActionsOnSave": [
     "source.fixAll.eslint"
   ],
