--- a/extras/package.json
+++ b/extras/package.json
@@ -162,9 +162,9 @@
     "cross-spawn": "^7.0.6",
     "eva-icons": "1.1.3",
     "fs-extra": "11.2.0",
-    "glob": "11.0.0",
     "ionicons": "7.4.0",
     "line-awesome": "1.3.0",
-    "themify-icons": "github:lykmapipo/themify-icons"
+    "themify-icons": "github:lykmapipo/themify-icons",
+    "tinyglobby": "^0.2.10"
   }
 }
