perf(app-webpack): replace fast-glob with tinyglobby

--- a/app-webpack/package.json
+++ b/app-webpack/package.json
@@ -110,7 +110,6 @@
     "error-stack-parser": "^2.1.4",
     "esbuild": "^0.24.0",
     "express": "^4.21.1",
-    "fast-glob": "^3.3.2",
     "file-loader": "^6.2.0",
     "fs-extra": "^11.2.0",
     "hash-sum": "^2.0.0",
@@ -136,6 +135,7 @@
     "semver": "^7.6.3",
     "serialize-javascript": "^6.0.2",
     "terser-webpack-plugin": "^5.3.10",
+    "tinyglobby": "^0.2.10",
     "ts-essentials": "^10.0.2",
     "url-loader": "^4.1.1",
     "vue-loader": "^17.4.2",
