--- a/create-quasar/package.json
+++ b/create-quasar/package.json
@@ -31,12 +31,12 @@
     "create-test-project": "tsx scripts/create-test-project.ts"
   },
   "dependencies": {
-    "fast-glob": "^3.3.2",
     "fs-extra": "^11.2.0",
     "kolorist": "^1.8.0",
     "lodash": "^4.17.21",
     "minimist": "^1.2.8",
-    "prompts": "^2.4.2"
+    "prompts": "^2.4.2",
+    "tinyglobby": "^0.2.10"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.7",
