--- a/docs/package.json
+++ b/docs/package.json
@@ -17,8 +17,8 @@
   },
   "dependencies": {
     "@quasar/extras": "^1",
-    "quasar": "^2",
     "prismjs": "^1.29.0",
+    "quasar": "^2",
     "register-service-worker": "^1.7.2",
     "vue": "3.4.20",
     "vue-router": "^4.4.5"
@@ -30,12 +30,12 @@
     "eslint": "^8.57.0",
     "eslint-config-quasar": "^0.0.1",
     "eslint-plugin-quasar": "^1.1.0",
-    "fast-glob": "^3.3.2",
     "fs-extra": "^11.2.0",
     "gray-matter": "^4.0.3",
     "markdown-ast": "^0.3.0",
     "markdown-it": "^14.1.0",
     "markdown-it-container": "^4.0.0",
+    "tinyglobby": "^0.2.10",
     "toml": "^3.0.0",
     "vite-plugin-checker": "^0.7.2",
     "workbox-build": "^7.1.1"
