--- a/ui/package.json
+++ b/ui/package.json
@@ -85,7 +85,6 @@
     "esbuild": "^0.24.0",
     "eslint": "^8.57.0",
     "eslint-config-quasar": "workspace:*",
-    "fast-glob": "^3.3.2",
     "fs-extra": "^11.2.0",
     "kolorist": "^1.8.0",
     "open": "^10.1.0",
@@ -93,6 +92,7 @@
     "prettier": "^3.3.3",
     "sass-embedded": "^1.80.2",
     "table": "^6.8.2",
+    "tinyglobby": "^0.2.10",
     "typescript": "^5.6.2",
     "vue": "^3.5.5"
   },
